create OnePage link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
 
-<a href="chat/frontend/chat.html">Chatroom</a>
+<a href="chat/frontend/chat.html">Chatroom</a> 
+<a href="onepage/index.html">OnePage</a>
+
 
 
 
