--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 
 
-<a href="chat/frontend/chat.html">Chatroom</a> 
-<a href="onepage/index.html">OnePage</a>
+<a href="chat/frontend/chat.html">Chatroom</a><br> 
+<a href="onepage/index.html">OnePage</a><br>
+<<a href="booklog/index.html">booklog</a>
 
 
 
